Fixed careplan notification layout issue
The annotation notification badge would cause a left/right scroll
bar to appear under the resource. Fixed by moving 1px to the left.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -19929,7 +19929,7 @@ button.nobackground{
 .careplan-notification{
     position:absolute;
     top: 0px;
-    right:0px;
+    right:1px;
 
 }
 
